# spec-kit

./: .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  spec-driven.md
.devcontainer/: devcontainer.json  post-create.sh
.github/: CODEOWNERS
.github/workflows/: docs.yml  lint.yml  release.yml
.github/workflows/scripts/: check-release-exists.sh  create-github-release.sh  create-release-packages.ps1  create-release-packages.sh  generate-release-notes.sh  get-next-version.sh  update-version.sh
docs/: .gitignore  README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  toc.yml  upgrade.md
memory/: constitution.md
scripts/bash/: check-prerequisites.sh  common.sh  create-new-feature.sh  setup-plan.sh  update-agent-context.sh
scripts/powershell/: check-prerequisites.ps1  common.ps1  create-new-feature.ps1  setup-plan.ps1  update-agent-context.ps1
templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
templates/commands/: analyze.md  checklist.md  clarify.md  constitution.md  implement.md  plan.md  specify.md  tasks.md  taskstoissues.md
