[project]
name = "specify-cli"
version = "0.0.22"
description = "Specify CLI（GitHub Spec Kit 的一部分）：用于按规格驱动开发（SDD）引导初始化项目的工具。"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "httpx[socks]",
    "platformdirs",
    "readchar",
    "truststore>=0.10.4",
]

[project.scripts]
specify = "specify_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specify_cli"]

